week2/project/todo-back/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proj-postgres-ss
  namespace: project
  labels:
    app: proj-postgres
spec:
  serviceName: proj-postgres
  replicas: 1
  selector:
    matchLabels:
      app: proj-postgres
  template:
    metadata:
      labels:
        app: proj-postgres
    spec:
      containers:
      - name: proj-postgres
        image: postgres:13.0
        ports:
        - containerPort: 5432
          name: proj-postgres
        volumeMounts:
          - name: todo
            mountPath: /var/lib/postgresql/todo
  volumeClaimTemplates:
    - metadata:
        name: todo
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
